Object Info's Random socket produces erratic results when material is applied to multiple Dupli instances of an object. #41003

Closed
opened 2014-07-09 14:09:02 +02:00 by Darren Waschow · 5 comments

System Information
Win7 64, nVidia Quadro K4000

Blender Version
Broken: 2.71 Hash: 9337574

When using the Object Info node's Random socket to randomize colors, Dupli instances of the object change color based on the spatial location of other instances.ObjectInfoRandomInstanceGlitch.blend

Exact steps for others to reproduce the error

  
1. Select Instance 1
2. Switch to Rendered view in the 3D View
3. Duplicate with Ctrl-D
4. Move the duplicate aside and then duplicate it to create a third instance.
5. Move the third duplicate around and notice the changing colors of the second duplicate.
6. Duplicate again and notice the changing colors of the second and third duplicate.
**System Information** Win7 64, nVidia Quadro K4000 **Blender Version** Broken: 2.71 Hash: 9337574 When using the Object Info node's Random socket to randomize colors, Dupli instances of the object change color based on the spatial location of other instances.[ObjectInfoRandomInstanceGlitch.blend](https://archive.blender.org/developer/F97182/ObjectInfoRandomInstanceGlitch.blend) **Exact steps for others to reproduce the error** ``` ``` 1. Select Instance 1 2. Switch to Rendered view in the 3D View 3. Duplicate with Ctrl-D 4. Move the duplicate aside and then duplicate it to create a third instance. 5. Move the third duplicate around and notice the changing colors of the second duplicate. 6. Duplicate again and notice the changing colors of the second and third duplicate.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @skwerm

Added subscriber: @skwerm

This issue was referenced by 5b0e4cd8c9

This issue was referenced by 5b0e4cd8c99e500baee0d951f4819b68c9215cd9
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 5b0e4cd8c9.

Closed by commit 5b0e4cd8c9.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41003
No description provided.